[package]
name = "euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "euler"
path = "src/lib.rs"

[[bin]]
name = "multiples_of_three_or_five"
path = "src/problems/multiples_of_three_or_five.rs"

[[bin]]
name = "even_fib_numbers"
path = "src/problems/even_fib_numbers.rs"

[[bin]]
name = "largest_prime_factor"
path = "src/problems/largest_prime_factor.rs"

[dependencies]
